Modify module-info